<resources>
    <string name="app_name">parkingApp</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login">Parking - App</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Wachtwoord</string>
    <string name="login">Aanmelden</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="create_account">Nog geen account? Klik hier</string>
    <string name="title_activity_timer">Timer</string>
    <string name="notification">Notficiation Title</string>
    <string name="notification_channel_description">Notification Descp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
